--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "front-end",
-  "version": "0.0.0",
+  "name": "double-wallet",
+  "version": "1.0.0",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build && electron ."
+    "electron": "ng build && electron .",
+    "build-electron": "ng build && electron-packager . DoubleWallet --out=release-build --platform=win32 --arch=x64 --overwrite"
   },
   "prettier": {
     "overrides": [
